# zyli

./: .gitignore  PROMPT.md  README.md  build.zig  build.zig.zon
.agent/: TODO.md  hyli-model-inventory.md
.claude/: ralph-loop.local.md
compat/: README.md  corpus.zig
compat/corpus/: INDEX.md
compat/fixture-gen/: Cargo.toml  rust-toolchain.toml
compat/fixture-gen/src/: main.rs
docs/: implementation-plan.md
src/: main.zig  root.zig
src/crypto/: bls.zig  consensus_verify.zig  mod.zig  signable.zig  zolt_arith_adapter.zig
src/model/: block.zig  borsh.zig  compat_test.zig  hash.zig  mod.zig  types.zig
src/node/: .follower.zig.swp  da_sync.zig  follower.zig  handshake.zig  identity.zig  integration_test.zig  mod.zig
src/state/: mod.zig  replay.zig
src/storage/: block_store.zig  mod.zig
src/wire/: da.zig  framing.zig  handshake.zig  mod.zig  protocol.zig  tcp_message.zig  validate.zig
